Got the total unique items and average price to calculate.  No df table yet.

--- a/HW4_Heroes_of_Pymoli.ipynb
+++ b/HW4_Heroes_of_Pymoli.ipynb
@@ -182,7 +182,7 @@
     }
    ],
    "source": [
-    "# Total Number of Gamers\n",
+    "#Total Number of Gamers\n",
     "#TODO:  Put into dataframe\n",
     "Total_Gamers_df = purchase_file_df['SN'].nunique()\n",
     "Total_Gamers_df"
@@ -190,10 +190,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "179\n",
+      "3.0509871794871795\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Purchase Analysis Total\n",
+    "unique_items = purchase_file_df['Item ID'].nunique()\n",
+    "print(unique_items)\n",
+    "\n",
+    "average_purchase_price = purchase_file_df['Price'].mean()\n",
+    "print(average_purchase_price)"
+   ]
   },
   {
    "cell_type": "code",
