Got everything in the Purchase Analysis to calculate just cannot get it to out put to a pretty data frame.  Saving that to later.

--- a/HW4_Heroes_of_Pymoli.ipynb
+++ b/HW4_Heroes_of_Pymoli.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "576"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,25 +190,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "179\n",
-      "3.0509871794871795\n"
+      "   Total Unique Items  Average Purchase Price  Total Number of Purchases  \\\n",
+      "0                 179                    3.05                        780   \n",
+      "\n",
+      "   Total_Revenue  \n",
+      "0        2379.77  \n"
      ]
     }
    ],
    "source": [
     "#Purchase Analysis Total\n",
+    "#Unique items in the data set.\n",
     "unique_items = purchase_file_df['Item ID'].nunique()\n",
-    "print(unique_items)\n",
+    "#print(unique_items)\n",
     "\n",
-    "average_purchase_price = purchase_file_df['Price'].mean()\n",
-    "print(average_purchase_price)"
+    "#Average Purchase Price\n",
+    "average_purchase_price = (purchase_file_df['Price'].mean()).round(decimals=2)\n",
+    "#print(average_purchase_price)\n",
+    "\n",
+    "#Total number of purchases\n",
+    "total_purchases = (purchase_file_df['Purchase ID']).count()\n",
+    "#print(total_purchases)\n",
+    "\n",
+    "total_revenue = ((purchase_file_df['Price']).sum()).round(decimals=2)\n",
+    "#print(total_revenue)\n",
+    "\n",
+    "Purchase_Analysis = [{'Total Unique Items':(unique_items), 'Average Purchase Price':(average_purchase_price), 'Total Number of Purchases':(total_purchases), 'Total_Revenue':(total_revenue)}]\n",
+    "purchase_df = pd.DataFrame(Purchase_Analysis)\n",
+    "print(purchase_df)"
    ]
   },
   {
