Got the Gender to calculate with percentage totals just need to add "%" and limit the number of decimals.

--- a/HW4_Heroes_of_Pymoli.ipynb
+++ b/HW4_Heroes_of_Pymoli.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "576"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,23 +190,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Total Unique Items  Average Purchase Price  Total Number of Purchases  \\\n",
-      "0                 179                    3.05                        780   \n",
-      "\n",
-      "   Total_Revenue  \n",
-      "0        2379.77  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Unique Items</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Number of Purchases</th>\n",
+       "      <th>Total_Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>179</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>780</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Unique Items  Average Purchase Price  Total Number of Purchases  \\\n",
+       "0                 179                    3.05                        780   \n",
+       "\n",
+       "   Total_Revenue  \n",
+       "0        2379.77  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Purchase Analysis Total\n",
+    "\n",
     "#Unique items in the data set.\n",
     "unique_items = purchase_file_df['Item ID'].nunique()\n",
     "#print(unique_items)\n",
@@ -224,7 +265,169 @@
     "\n",
     "Purchase_Analysis = [{'Total Unique Items':(unique_items), 'Average Purchase Price':(average_purchase_price), 'Total Number of Purchases':(total_purchases), 'Total_Revenue':(total_revenue)}]\n",
     "purchase_df = pd.DataFrame(Purchase_Analysis)\n",
-    "print(purchase_df)"
+    "purchase_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Male                     652\n",
+       "Female                   113\n",
+       "Other / Non-Disclosed     15\n",
+       "Name: Gender, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Gender Demographics\n",
+    "gender_of_players = purchase_file_df[\"Gender\"].value_counts()\n",
+    "gender_of_players "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Gender_pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>652</td>\n",
+       "      <td>83.589744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>113</td>\n",
+       "      <td>14.487179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1.923077</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Gender  Gender_pct\n",
+       "Male                      652   83.589744\n",
+       "Female                    113   14.487179\n",
+       "Other / Non-Disclosed      15    1.923077"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the gender of players into a DataFrame\n",
+    "gender_of_players_df = pd.DataFrame(gender_of_players)\n",
+    "gender_of_players_df['Gender_pct'] = gender_of_players_df.Gender / (gender_of_players_df.Gender.sum()/100)\n",
+    "gender_of_players_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>652</td>\n",
+       "      <td>83.589744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>113</td>\n",
+       "      <td>14.487179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1.923077</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Total Count  Percentage of Players\n",
+       "Male                           652              83.589744\n",
+       "Female                         113              14.487179\n",
+       "Other / Non-Disclosed           15               1.923077"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make \"Genders\" into \"Total Count\" and Add a Column \"% of players\"\n",
+    "renamed_genders_of_players_df = gender_of_players_df.rename(columns={\"Gender\":\"Total Count\", \"Gender_pct\":\"Percentage of Players\"})\n",
+    "renamed_genders_of_players_df"
    ]
   },
   {
