Renamed the columns in the gender table, started working on the gender analysis.

--- a/HW4_Heroes_of_Pymoli.ipynb
+++ b/HW4_Heroes_of_Pymoli.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "Other / Non-Disclosed      15    1.923077"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#gender_of_players_df.round(\"Gender_pct\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +428,7 @@
        "Other / Non-Disclosed           15               1.923077"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +436,76 @@
    "source": [
     "# Make \"Genders\" into \"Total Count\" and Add a Column \"% of players\"\n",
     "renamed_genders_of_players_df = gender_of_players_df.rename(columns={\"Gender\":\"Total Count\", \"Gender_pct\":\"Percentage of Players\"})\n",
+    "\n",
     "renamed_genders_of_players_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender Of Players</th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Male                     652\n",
+       "Female           ...</td>\n",
+       "      <td>780</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>2379.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   Gender Of Players  Purchase Count  \\\n",
+       "0  Male                     652\n",
+       "Female           ...             780   \n",
+       "\n",
+       "   Average Purchase Price  Total Purchase Value  \n",
+       "0                    3.05               2379.77  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Purchase Analysis by Gender\n",
+    "analysis_by_gender_df = pd.DataFrame({\"Gender Of Players\": [gender_of_players],\n",
+    "                                       \"Purchase Count\": [total_purchases],\n",
+    "                                       \"Average Purchase Price\":[average_purchase_price],\n",
+    "                                       \"Total Purchase Value\": [total_revenue]})\n",
+    "analysis_by_gender_df"
    ]
   },
   {
