Nothing major happening with this save.  Playing around with adding dollar signs to my final tables.

--- a/HW4_Heroes_of_Pymoli.ipynb
+++ b/HW4_Heroes_of_Pymoli.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "0        2379.77  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,35 +1134,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.00      NaN\n",
-       "1.00      4.0\n",
-       "1.01      NaN\n",
-       "1.02      NaN\n",
-       "1.03      NaN\n",
-       "         ... \n",
-       "178.00    NaN\n",
-       "179.00    NaN\n",
-       "181.00    NaN\n",
-       "182.00    NaN\n",
-       "183.00    NaN\n",
-       "Length: 318, dtype: float64"
+       "0      16.0\n",
+       "1       8.0\n",
+       "2      30.0\n",
+       "3      18.0\n",
+       "4       5.0\n",
+       "       ... \n",
+       "773     NaN\n",
+       "774     NaN\n",
+       "775     NaN\n",
+       "777     NaN\n",
+       "778     NaN\n",
+       "Length: 592, dtype: float64"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Purchase Count - Total Purchase Value\n",
-    "item_purchase_value_analysis_df= (itemid_analysis_df)*(item_price_purchased)\n",
+    "item_purchase_value_analysis_df= itemid_analysis_df*item_price_purchased\n",
     "item_purchase_value_analysis_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Purchase Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wolf</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wolf, Promise of the Moonwalker</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Worldbreaker</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yearning Crusher</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yearning Mageblade</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>352 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Item ID  Item Name  Purchase Count\n",
+       "0                                    3.0        NaN             4.0\n",
+       "1                                    4.0        NaN             4.0\n",
+       "2                                    4.0        NaN             6.0\n",
+       "3                                    4.0        NaN             6.0\n",
+       "4                                    3.0        NaN             5.0\n",
+       "...                                  ...        ...             ...\n",
+       "Wolf                                 NaN        5.0             NaN\n",
+       "Wolf, Promise of the Moonwalker      NaN        5.0             NaN\n",
+       "Worldbreaker                         NaN        3.0             NaN\n",
+       "Yearning Crusher                     NaN        3.0             NaN\n",
+       "Yearning Mageblade                   NaN        3.0             NaN\n",
+       "\n",
+       "[352 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Spender Table with Fields\n",
+    "item_table_df = pd.DataFrame({\"Item ID\": item_nubmer_purchased, \"Item Name\": item_name_purchased, \"Purchase Count\": itemid_analysis_df})\n",
+    "item_table_df"
    ]
   },
   {
