Final Submission of both the pandas document and the written analysis.

--- a/HW4_Heroes_of_Pymoli.ipynb
+++ b/HW4_Heroes_of_Pymoli.ipynb
@@ -42,30 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Purchase ID      int64\n",
-       "SN              object\n",
-       "Age              int64\n",
-       "Gender          object\n",
-       "Item ID          int64\n",
-       "Item Name       object\n",
-       "Price          float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#identify the types of columns\n",
-    "purchase_file_df.dtypes"
+    "#purchase_file_df.dtypes"
    ]
   },
   {
@@ -781,7 +763,12 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
